Fix card alignment in feed page

--- a/client/src/components/FeedPage/FeedPage.css
+++ b/client/src/components/FeedPage/FeedPage.css
@@ -4,14 +4,14 @@
 
 .feedPage_container > .page_contents > .card-container {
     margin: 0 auto;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     width: 800px;
     padding: 0;
 }
 
 .post-cards-container .card-container {
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 30px;
     width: 800px;
     padding: 0;
 }
