--- a/client/src/components/NewPost/NewPost.css
+++ b/client/src/components/NewPost/NewPost.css
@@ -3,6 +3,7 @@
 	min-height: 100px;
     height: 60px;
     margin: 10px;
+    margin-bottom: 20px;
     position: relative;
 }
 
